@@ -33,6 +33,9 @@ class CompilerTest(unittest.TestCase):
                 else:
                     compiler.compile(buf, basename, "exec")
 
+    def testNewClassSyntax(self):
+        compiler.compile("class foo():pass\n\n","<string>","exec")
+        
     def testLineNo(self):
         # Test that all nodes except Module have a correct lineno attribute.
         filename = __file__
